syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.rajuProject.olaKrutrimAssignment.grpc";

service ProcessService {
    rpc sendProcessedData(ProcessRequest) returns (stream ProcessResponse);
}

message ProcessRequest {
    repeated int32 numbers = 1;
}

message ProcessResponse {
    int32 number = 1;
}